scroll bar visibility issue fix

--- a/src/styles/seeMore.module.css
+++ b/src/styles/seeMore.module.css
@@ -1,19 +1,43 @@
 .f22storiesdrawer {
-    position: fixed;
-    bottom: 0;
-    /* left: 0; */
-    width: 100%;
-    height: 0;
-    transition: transform 0.3s ease-in-out;
-    overflow: hidden;
-    transform: translateY(100%);
-    will-change: transform, height;
-    z-index: 2147483647;
-    max-width: 440px;
-    /* background-color: white; */
-  }
-  
-  .f22open {
-    height: 797px;
-    transform: translateY(0%);
-  }
+  position: fixed;
+  bottom: 0;
+  /* left: 0; */
+  width: 100%;
+  height: 0;
+  transition: transform 0.3s ease-in-out;
+  overflow: hidden;
+  transform: translateY(100%);
+  will-change: transform, height;
+  z-index: 2147483647;
+  max-width: 440px;
+  /* background-color: white; */
+}
+
+.f22open {
+  height: 797px;
+  transform: translateY(0%);
+}
+
+/* Apply styles to hide scrollbar */
+.hideScrollBar {
+overflow-x: scroll;
+}
+
+/* Apply styles to hide scrollbar for WebKit browsers (Chrome, Safari, etc.) */
+.hideScrollBar::-webkit-scrollbar {
+width: 0.2rem; /* Set the width of the invisible scrollbar */
+height: 0;
+}
+
+.hideScrollBar::-webkit-scrollbar-thumb {
+background-color: transparent; /* Set the background color of the thumb to transparent */
+}
+
+/* Apply styles to hide scrollbar for Firefox */
+.hideScrollBar {
+scrollbar-width: thin; /* For Firefox */
+}
+
+.hideScrollBar::-webkit-scrollbar-track {
+background-color: transparent; /* Set the background color of the track to transparent */
+}
